@@ -46,6 +46,7 @@ etsf_properties = {
    "occupations":ETSF_PROP_VAR_SUB_ACCESS,
    "real_space_wavefunctions":ETSF_PROP_VAR_SUB_ACCESS,
    "reduced_coordinates_of_plane_waves":ETSF_PROP_VAR_SUB_ACCESS,
+   "coordinates_of_grid_points":ETSF_PROP_VAR_UNFORMATTED,
    "density":ETSF_PROP_VAR_UNFORMATTED + ETSF_PROP_VAR_UNITS,
    "correlation_potential":ETSF_PROP_VAR_UNFORMATTED + ETSF_PROP_VAR_UNITS,
    "exchange_correlation_potential":ETSF_PROP_VAR_UNFORMATTED + ETSF_PROP_VAR_UNITS,
@@ -82,7 +83,7 @@ etsf_attributes = {
       "\"ETSF Nanoquanta\""],
    "file_format_version":[
       "real single_precision",
-      "1.30"],
+      "2.1"],
    "history":[
       "string history_length"],
    "k_dependent":[
@@ -113,11 +114,13 @@ etsf_dimensions = [
    "number_of_grid_points_vector2",
    "number_of_grid_points_vector3",
    "number_of_kpoints",
+   "number_of_localisation_regions",
    "number_of_reduced_dimensions",
    "number_of_spinor_components",
    "number_of_spins",
    "number_of_symmetry_operations",
    "number_of_vectors",
+   "number_of_used_grid_points",
    "real_or_complex_coefficients",
    "real_or_complex_density",
    "real_or_complex_gw_corrections",
@@ -152,6 +155,11 @@ etsf_variables = {
       "number_of_spinor_components",
       "max_number_of_coefficients",
       "real_or_complex_coefficients"],
+   "coordinates_of_grid_points":[
+      "integer",
+      "number_of_localisation_regions",
+      "number_of_used_grid_points",
+      "number_of_reduced_dimensions"],
    "correlation_functional":[
       "string",
       "character_string_length"],
@@ -260,6 +268,9 @@ etsf_variables = {
    "number_of_coefficients":[
       "integer",
       "number_of_kpoints"],
+   "number_of_coefficients_per_grid_point":[
+      "integer",
+      "number_of_used_grid_points"],
    "number_of_electrons":[
       "integer"],
    "number_of_states":[
@@ -356,7 +367,9 @@ etsf_groups = {
       "basis_set",
       "kinetic_energy_cutoff",
       "number_of_coefficients",
-      "reduced_coordinates_of_plane_waves"],
+      "reduced_coordinates_of_plane_waves",
+      "coordinates_of_grid_points",
+      "number_of_coefficients_per_grid_point"],
    "gwdata":[
       "gw_corrections",
       "kb_formfactor_sign",
@@ -381,14 +394,25 @@ etsf_group_list = [
 
 # Main variable nicknames
 etsf_variables_shortnames = {
-   "coefficients_of_wavefunctions":"wfs_pw",
+   "coefficients_of_wavefunctions":"wfs_coeff",
    "real_space_wavefunctions":"wfs_rsp",
    "density":"density",
    "exchange_potential":"pot_x_only",
    "correlation_potential":"pot_c_only",
    "exchange_correlation_potential":"pot_xc",
    "reduced_coordinates_of_plane_waves":"red_coord_pw",
+   "reduced_coordinates_of_kpoints":"red_coord_kpt",
    "kinetic_energy_cutoff":"kin_cutoff",
+   "reduced_symmetry_matrices":"red_sym_matrices",
+   "reduced_symmetry_translations":"red_sym_trans",
+   "reduced_atom_positions":"red_at_pos",
+   "pseudopotential_types":"pseudo_types",
+   "exchange_functional":"x_functional",
+   "correlation_functional":"c_functional",
+   "number_of_coefficients":"n_coeff",
+   "number_of_coefficients_per_grid_point":"n_coeff_grid",
+   "coordinates_of_grid_points":"coord_grid",
+   "monkhorst_pack_folding":"mp_folding",
    "kb_formfactors":"kb_coeff",
    "kb_formfactor_derivative":"kb_coeff_der",
    "kb_formfactor_sign":"kb_coeff_sig"}
@@ -445,7 +469,11 @@ etsf_specifications_files = {
                              ("var", "reduced_coordinates_of_plane_waves"),
                              ("var", "coefficients_of_wavefunctions")],
                             "real_space":
-                            [("var", "real_space_wavefunctions")]}))
+                            [("var", "real_space_wavefunctions")],
+                            "daubechies_wavelets":
+                            [("var", "coordinates_of_grid_points"),
+                             ("var", "number_of_coefficients_per_grid_point"),
+                             ("var", "coefficients_of_wavefunctions")]}))
     ],
    [])
   }
