@@ -1,7 +1,7 @@
 !! NOTES
-!!  This file has been automatically generated by the @SCRIPT@
+!!  This file has been automatically generated by the config/scripts/autogen_tests.py
 !!  script. Any change you would bring to it will systematically be
-!!  overwritten. See the template file in config/etsf/template.tests.
+!!  overwritten. See the template file in config/etsf/template.tests_init.
 
 program tests_init
 
@@ -31,6 +31,7 @@ contains
   subroutine test_data_init()
     type(etsf_dims) :: dims
     integer :: ncid, dimvalue
+    type(etsf_groups_flags) :: flags
     type(etsf_io_low_error) :: error
     type(etsf_io_low_var_infos) :: var_infos
     character(len = *), parameter :: me = "test_data_init"
@@ -38,19 +39,6 @@ contains
 
     write(*,*)
     write(*,*) "Testing etsf_io_data_init()..."
-
-    call etsf_io_data_init("test_wrong_1.nc", etsf_main_none, -1, &
-      & dims, "Fichier de test", "history", lstat, error)
-    call tests_write_status("groups: wrong value", (.not. lstat), error)
-
-    call etsf_io_data_init("test_wrong_1.nc", -1, etsf_grp_main, &
-      & dims, "Fichier de test", "history", lstat, error)
-    call tests_write_status("mains: wrong value", (.not. lstat), error)
-
-    call etsf_io_data_init("test_wrong_1.nc", etsf_main_none, etsf_grp_none, &
-      & dims, "Fichier de test", "history", lstat, error)
-    call tests_write_status("filename: wrong value (file exists)", (.not. lstat), error)
-
 
     dims%number_of_grid_points_vector3 = 5
     dims%number_of_symmetry_operations = 4
