@@ -1,7 +1,7 @@
 !! NOTES
-!!  This file has been automatically generated by the @SCRIPT@
+!!  This file has been automatically generated by the config/scripts/autogen_tests.py
 !!  script. Any change you would bring to it will systematically be
-!!  overwritten. See the template file in config/etsf/template.tests.
+!!  overwritten. See the template file in config/etsf/template.tests_write.
 
 program tests_write
 
@@ -39,14 +39,11 @@ contains
     write(*,*)
     write(*,*) "Testing etsf_io_data_write()..."
 
-    call etsf_io_data_write("pouet", etsf_grp_none, grp, lstat, error)
+    call etsf_io_data_write("pouet", grp, lstat, error)
     call tests_write_status("filename: wrong value (no file)", (.not. lstat), error)
     
-    call etsf_io_data_write("Makefile", etsf_grp_none, grp, lstat, error)
+    call etsf_io_data_write("Makefile", grp, lstat, error)
     call tests_write_status("filename: wrong value (text file)", (.not. lstat), error)
-
-    call etsf_io_data_write("test_density.nc", -1, grp, lstat, error)
-    call tests_write_status("groups: wrong value", (.not. lstat), error)
 
     write(*,*)
 
